tests/golden/gitops-aws/platform-recovery/ServiceMonitor__envoy__envoy-gateway.yaml
apiVersion: monitoring.coreos.com/v1
kind: ServiceMonitor
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "2"
  name: envoy-gateway
  namespace: envoy
spec:
  endpoints:
    - interval: 30s
      port: metrics
  selector:
    matchLabels:
      control-plane: envoy-gateway
